<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="optViewModel"
            type="com.example.apiwithmvvm.activity.otp.OtpViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginVertical="10dp"
                android:src="@drawable/ic_email"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/otp_verification"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_time_password_otp_has_been_sent_via_email_to"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/mohit_gmail_com"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/enter_otp"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/llTimer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="4dp"
                                android:text="@string/resend_in"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tvTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_00_00"
                                android:textColor="@color/red" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvResendOTP"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/resend_otp"
                            android:textColor="@color/blue"
                            android:visibility="gone" />

                    </LinearLayout>

                </LinearLayout>

                <com.chaos.view.PinView
                    android:id="@+id/pinView"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:cursorVisible="true"
                    android:inputType="number"
                    android:itemBackground="@color/white"
                    app:hideLineWhenFilled="false"
                    app:itemCount="6"
                    app:itemHeight="50dp"
                    app:itemRadius="5dp"
                    app:itemSpacing="5dp"
                    app:itemWidth="50dp"
                    app:lineColor="@drawable/pinview_selector"
                    app:lineWidth="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:id="@+id/tvMessage"
                    android:visibility="gone"
                    android:textColor="@color/red"
                    android:layout_marginTop="3dp"
                    android:text="@string/you_can_send_the_otp_up_to_6_times_in_24_hours"  />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvVerifyOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/black"
            app:strokeWidth="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="9dp"
                android:text="@string/verify_otp"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

</layout>