<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="signUpViewModel"
            type="com.example.apiwithmvvm.activity.signup.SignUpViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="12dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:text="@string/sign_up"
            android:textSize="17sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="50dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ivProfile"
                android:src="@drawable/logo"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvSelectProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textStyle="bold"
            android:textColor="@color/hyperlink_blue"
            android:layout_marginBottom="5dp"
            android:text="@string/select_profile"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="13sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                android:id="@+id/mcvUserName"
                app:cardElevation="0dp"
                app:strokeColor="@color/hint_text_color"
                app:strokeWidth="1dp">

                <EditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/enter_username"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    tools:ignore="Autofill,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvUserNameErr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="10sp"
                    android:visibility="gone"
                    tools:ignore="SmallSp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="13sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/hint_text_color"
                app:strokeWidth="1dp">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/enter_name"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textSize="13sp"
                    tools:ignore="Autofill,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvNameErr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="10sp"
                    android:visibility="gone"
                    tools:ignore="SmallSp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="13sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/hint_text_color"
                app:strokeWidth="1dp">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textSize="13sp"
                    tools:ignore="Autofill,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvEmailErr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="10sp"
                    android:visibility="gone"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="13sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/hint_text_color"
                app:strokeWidth="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textSize="13sp"
                        tools:ignore="Autofill,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    <ImageView
                        android:id="@+id/ivPasswordVisibility"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:padding="8dp"
                        android:src="@drawable/ic_show"
                        tools:ignore="ContentDescription" />

                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvPasswordErr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="10sp"
                    android:visibility="gone"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/black"
            app:strokeWidth="0dp">

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="9dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/have_an_account_log_in"
            android:textSize="15sp" />


    </LinearLayout>

</layout>


