<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!-- Declare variables here -->
        <variable
            name="user"
            type="com.example.apiwithmvvm.model.User" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvCollectionItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:outlineAmbientShadowColor="@color/ambientShadowColor"
        android:outlineSpotShadowColor="@color/spotShadowColor"
        app:cardBackgroundColor="@color/off_white"
        app:strokeColor="@color/hint_text_color"
        app:cardCornerRadius="7dp"
        app:cardElevation="4dp"
        tools:ignore="MissingDefaultResource,UnusedAttribute">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry,UselessLeaf">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginVertical="6dp"
                android:layout_gravity="center"
                app:cardCornerRadius="35dp"
                app:strokeColor="@color/hint_text_color"
                app:strokeWidth="1dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/ivProfile"
                    app:imageUrl="@{user.profileImageUrl}"
                    android:src="@drawable/logo"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:weightSum="5"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text="@string/username"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="0dp"
                    android:text="@{user.userName}"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="4dp"
                android:weightSum="5"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text="@string/name"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="0dp"
                    android:text="@{user.name}"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="6dp"
                android:weightSum="5"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text="@string/email"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="0dp"
                    android:text="@{user.email}"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>
